--- a/package.json
+++ b/package.json
@@ -1,58 +1,27 @@
 {
-  "name": "personal-site",
-  "version": "4.2.3",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "gulp dev",
-    "test": "jest --watch=true",
-    "test:ci": "jest --coverage=true",
-    "e2e": "jest --config jest-e2e.js",
-    "build": "gulp build",
-    "build:prod": "gulp build --production"
-  },
-  "author": "Fabian Skutta",
-  "license": "MIT",
-  "repository": "github:fabianskutta/personal-site",
-  "devDependencies": {
-    "autoprefixer": "^10.2.5",
-    "babel-runtime": "^6.26.0",
-    "browser-sync": "^2.26.12",
-    "cssnano": "^5.0.2",
-    "faker": "^5.1.0",
-    "fibers": "^5.0.0",
-    "gulp": "^4.0.2",
-    "gulp-babel": "^8.0.0",
-    "gulp-clean-css": "^4.3.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-esbuild": "^0.8.2",
-    "gulp-htmlmin": "^5.0.1",
-    "gulp-if": "^3.0.0",
-    "gulp-jest": "^4.0.3",
-    "gulp-jshint": "^2.1.0",
-    "gulp-jslint": "^1.0.10",
-    "gulp-minify": "^3.1.0",
-    "gulp-plumber": "^1.2.1",
-    "gulp-postcss": "^9.0.0",
-    "gulp-rename": "^2.0.0",
-    "gulp-sass": "^5.0.0",
-    "gulp-sourcemaps": "^2.6.5",
-    "gulp-uglify": "^3.0.2",
-    "gulp-util": "^3.0.8",
-    "jest": "^26.6.3",
-    "jest-puppeteer": "^4.4.0",
-    "jshint": "^2.11.0",
-    "postcss": "^8.1.0",
-    "puppeteer": "^7.1.0",
-    "rename": "^1.0.4",
-    "rimraf": "^3.0.2",
-    "sass": "^1.35.1",
-    "tinyify": "^3.0.0",
-    "tsify": "^5.0.2",
-    "typescript": "^4.2.4",
-    "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0",
-    "watchify": "^4.0.0",
-    "yargs": "^17.1.1"
-  }
+	"name": "ud-basic-webdev-setup",
+	"private": false,
+	"version": "1.0.0",
+	"discription": "Bei diesem Repository handelt es sich um meine \"Test-/Entwicklungsumgebung\" für alle meine YouTube Tutorials. Sie basiert auf Vite, JS und SCSS",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"test": "vitest",
+		"coverage": "vitest run --coverage",
+		"preview": "vite preview",
+		"format": "prettier --write \"src/**/*.js\" \"src/**/*.html\" \"src/**/*.scss\""
+	},
+	"devDependencies": {
+		"c8": "^7.11.3",
+		"sass": "^1.49.9",
+		"vite": "^2.8.0",
+		"vitest": "^0.13.0"
+	},
+	"dependencies": {
+		"axios": "^0.27.2",
+		"eslint": "^8.10.0",
+		"eslint-config-prettier": "^8.4.0",
+		"eslint-plugin-prettier": "^4.0.0",
+		"prettier": "^2.5.1"
+	}
 }
