--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-	"name": "ud-basic-webdev-setup",
+	"name": "personal-site",
 	"private": false,
-	"version": "1.0.0",
-	"discription": "Bei diesem Repository handelt es sich um meine \"Test-/Entwicklungsumgebung\" für alle meine YouTube Tutorials. Sie basiert auf Vite, JS und SCSS",
+	"version": "4.3.1",
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
